# django_project

./: .gitignore  README.md  pyproject.toml
djangobasics/: manage.py  pytest.ini
djangobasics/agilelist/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
djangobasics/agilelist/fixtures/: statements.json
djangobasics/agilelist/migrations/: 0001_initial.py
djangobasics/agilelist/tests/: conftest.py  factories.py  test_models.py  test_urls.py  test_views.py
djangobasics/djangobasics/: asgi.py  settings.py  urls.py  wsgi.py
djangobasics/templates/filter/: search.html
djangobasics/templates/registration/: login.html
